Migrate syntax file format to yaml
I prefer writing syntax files in yaml so I set up a prepublish and
prealaunch task that automatically convert yaml to json because syntax
files can only be written in json. For this purpose i use js-yaml
external library.

--- a/package.json
+++ b/package.json
@@ -22,5 +22,11 @@
             "scopeName": "source.nestedtext",
             "path": "./syntaxes/nestedtext.tmLanguage.json"
         }]
+    },
+    "scripts": {
+        "vscode:prepublish": "npx js-yaml syntaxes/nestedtext.yaml > syntaxes/nestedtext.tmLanguage.json"
+    },
+    "devDependencies": {
+        "js-yaml": "^3.14.0"
     }
 }
