Add support for list-items
List-items starting with a dash symbol and a space or newline are
supported by the syntax grammar file.

--- a/syntaxes/nestedtext.yaml
+++ b/syntaxes/nestedtext.yaml
@@ -4,6 +4,7 @@ name: NestedText
 patterns:
   - include: "#line-comment"
   - include: "#string-item"
+  - include: "#list-item"
 repository:
   line-comment:
     patterns:
@@ -16,6 +17,14 @@ repository:
   string-item:
     patterns:
       - match: "^ *+(>( |\n))([^\n]*+)"
+        captures:
+          1:
+            name: keyword.other.nestedtext
+          3:
+            name: string.unquoted.nestedtext
+  list-item:
+    patterns:
+      - match: "^ *+(-( |\n))([^\n]*+)"
         captures:
           1:
             name: keyword.other.nestedtext
