--- a/syntaxes/nestedtext.yaml
+++ b/syntaxes/nestedtext.yaml
@@ -5,6 +5,7 @@ patterns:
   - include: "#line-comment"
   - include: "#string-item"
   - include: "#list-item"
+  - include: "#dictionary-item-multiline"
   - include: "#dictionary-item"
 repository:
   line-comment:
@@ -41,5 +42,13 @@ repository:
             name: keyword.other.nestedtext
           4:
             name: string.unquoted.nestedtext
+  dictionary-item-multiline:
+    patterns:
+      - match: ^ *+(:( |\n))([^\n]*+)
+        captures:
+          1:
+            name: keyword.other.nestedtext
+          3:
+            name: support.variable
 scopeName: source.nestedtext
 ...
