Fix wrong regex for dictionary keys
Fixed wrong regex to detect dictionary keys for both ordinary and multiline dictionaries

--- a/syntaxes/nestedtext.yaml
+++ b/syntaxes/nestedtext.yaml
@@ -34,7 +34,7 @@ repository:
             name: string.unquoted.nestedtext
   dictionary-item:
     patterns:
-      - match: "^ *+([^\\[|^{]+)(:( |\n))([^\n]*+)"
+      - match: "^ *+([^\\[|{][^:]*+)(:( |\n))([^\n]*+)"
         captures:
           1:
             name: support.variable
@@ -44,7 +44,7 @@ repository:
             name: string.unquoted.nestedtext
   dictionary-item-multiline:
     patterns:
-      - match: ^ *+(:( |\n))([^\n]*+)
+      - match: ^(:( |\n))([^\n]*+)
         captures:
           1:
             name: keyword.other.nestedtext
