Add support for inline lists
Inline lists will now be also highlighted correctly

--- a/syntaxes/nestedtext.yaml
+++ b/syntaxes/nestedtext.yaml
@@ -4,6 +4,7 @@ name: NestedText
 patterns:
   - include: "#line-comment"
   - include: "#string-item"
+  - include: "#list-item-inline"
   - include: "#list-item"
   - include: "#dictionary-item-inline"
   - include: "#dictionary-item-multiline"
@@ -33,6 +34,28 @@ repository:
             name: keyword.other.nestedtext
           3:
             name: string.unquoted.nestedtext
+  list-item-inline:
+    begin: \s*+(\[)
+    end: (])\s*+
+    captures:
+      1:
+        name: keyword.other.nestedtext
+    patterns:
+      - include: "$self"
+      - include: "#list-item-inline-inline-string"
+      - include: "#list-item-inline-separator"
+  list-item-inline-inline-string:
+    patterns:
+      - match: ((?:[^\n\[\]{},])+?)
+        captures:
+          1:
+            name: support.variable
+  list-item-inline-separator:
+    patterns:
+      - match: ((?:,)+?)
+        captures:
+          1:
+            name: keyword.other.nestedtext
   dictionary-item:
     patterns:
       - match: "^ *+([^\\[|{][^:]*+)(:( |\n))([^\n]*+)"
@@ -61,7 +84,6 @@ repository:
       - include: "$self"
       - include: "#dictionary-item-inline-inline-string"
       - include: "#dictionary-item-inline-key-value-separator"
-      # TODO: include inline list once rule is defined
   dictionary-item-inline-inline-string:
     patterns:
       - match: ((?:[^\n\[\]{},:])+?)
