Exclude trailing commas from highlighting
v3.0 of NestedText deprecated trailing commas in inline dictionaries and lists

--- a/syntaxes/nestedtext.yaml
+++ b/syntaxes/nestedtext.yaml
@@ -52,7 +52,7 @@ repository:
             name: support.variable
   list-item-inline-separator:
     patterns:
-      - match: ((?:,)+?)
+      - match: ((?:,)+?)(?!\s*+])
         captures:
           1:
             name: keyword.other.nestedtext
@@ -92,7 +92,7 @@ repository:
             name: support.variable
   dictionary-item-inline-key-value-separator:
     patterns:
-      - match: ((?::|,)+?)
+      - match: ((?::|,)+?)(?!\s*+})
         captures:
           1:
             name: keyword.other.nestedtext
