Added indentation rules
The indentation rules will tell VS Code if it should start the next line at a grater indent.

Additionally, the `onEnterRules` will automatically append `>`, `:` and `-` to continue multiline strings, multiline keys and lists.

(`language-configuration.json` doesn't seem to use the same RegEx engine as the syntax highlighting.
If you use possesive matching (`.*+`), the rule will silently fail.)

--- a/language-configuration.json
+++ b/language-configuration.json
@@ -20,5 +20,32 @@
         ["(", ")"],
         ["\"", "\""],
         ["'", "'"]
+    ],
+    "indentationRules": {
+        "increaseIndentPattern": "^\\s*(?:-|[^\\[{#\\s](?:[^:]|:[^ ])*:)$",
+        "decreaseIndentPattern": "(?!)"
+    },
+    "onEnterRules": [
+        {
+            "beforeText": "^\\s*>(?- |$)",
+            "action": {
+                "indent": "none",
+                "appendText": "- "
+            }
+        },
+        {
+            "beforeText": "^\\s*>(?: |$)",
+            "action": {
+                "indent": "none",
+                "appendText": "> "
+            }
+        },
+        {
+            "beforeText": "^\\s*:(?: |$)",
+            "action": {
+                "indent": "none",
+                "appendText": ": "
+            }
+        }
     ]
 }
