Stylistic change to regex
Changed `( |\n)` into `[ \n]` and removed quotes around a string.

--- a/syntaxes/nestedtext.yaml
+++ b/syntaxes/nestedtext.yaml
@@ -20,19 +20,19 @@ repository:
             name: comment.line.number-sign.nestedtext
   string-item:
     patterns:
-      - match: ^ *+(>( |\n))([^\n]*+)
+      - match: ^ *+(>[ \n])([^\n]*+)
         captures:
           1:
             name: keyword.other.nestedtext
-          3:
+          2:
             name: string.unquoted.nestedtext
   list-item:
     patterns:
-      - match: ^ *+(-( |\n))([^\n]*+)
+      - match: ^ *+(-[ \n])([^\n]*+)
         captures:
           1:
             name: keyword.other.nestedtext
-          3:
+          2:
             name: string.unquoted.nestedtext
   list-item-inline:
     begin: \s*+(\[)
@@ -58,21 +58,21 @@ repository:
             name: keyword.other.nestedtext
   dictionary-item:
     patterns:
-      - match: "^ *+([^\\[|{][^:]*+)(:( |\n))([^\n]*+)"
+      - match: ^ *+([^\[|{][^:]*+)(:[ \n])([^\n]*+)
         captures:
           1:
             name: support.variable
           2:
             name: keyword.other.nestedtext
-          4:
+          3:
             name: string.unquoted.nestedtext
   dictionary-item-multiline:
     patterns:
-      - match: ^(:( |\n))([^\n]*+)
+      - match: ^(:[ \n])([^\n]*+)
         captures:
           1:
             name: keyword.other.nestedtext
-          3:
+          2:
             name: support.variable
   dictionary-item-inline:
     begin: \s*+({)
