--- a/language-configuration.json
+++ b/language-configuration.json
@@ -27,7 +27,7 @@
     },
     "onEnterRules": [
         {
-            "beforeText": "^\\s*>(?- |$)",
+            "beforeText": "^\\s*- ",
             "action": {
                 "indent": "none",
                 "appendText": "- "
