--- a/syntaxes/nestedtext.yaml
+++ b/syntaxes/nestedtext.yaml
@@ -12,7 +12,7 @@ patterns:
 repository:
   line-comment:
     patterns:
-      - match: ^ *+(#)([^\n]*+) # possesive specific regex is better than .*
+      - match: ^\s*+(#)([^\n]*+) # possesive specific regex is better than .*
         captures:
           1:
             name: keyword.other.nestedtext
@@ -20,7 +20,7 @@ repository:
             name: comment.line.number-sign.nestedtext
   string-item:
     patterns:
-      - match: ^ *+(>[ \n])([^\n]*+)
+      - match: ^\s*+(>[ \n])([^\n]*+)
         captures:
           1:
             name: keyword.other.nestedtext
@@ -28,7 +28,7 @@ repository:
             name: string.unquoted.nestedtext
   list-item:
     patterns:
-      - match: ^ *+(-[ \n])([^\n]*+)
+      - match: ^\s*+(-[ \n])([^\n]*+)
         captures:
           1:
             name: keyword.other.nestedtext
@@ -58,7 +58,7 @@ repository:
             name: keyword.other.nestedtext
   dictionary-item:
     patterns:
-      - match: ^ *+([^\[|{][^:]*+)(:[ \n])([^\n]*+)
+      - match: ^\s*+([^\[{](?:[^:]|:[^ \n])*+)(:[ \n])([^\n]*+)
         captures:
           1:
             name: support.variable
@@ -68,7 +68,7 @@ repository:
             name: string.unquoted.nestedtext
   dictionary-item-multiline:
     patterns:
-      - match: ^(:[ \n])([^\n]*+)
+      - match: ^\s*+(:[ \n])([^\n]*+)
         captures:
           1:
             name: keyword.other.nestedtext
