Distinguish strict and lax grammars

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,4 +1,7 @@
 .vscode/**
-.vscode-test/**
+out/**
+src/**
+test/**
 .gitignore
-vsc-extension-quickstart.md
+tsconfig.json
+syntaxes/nestedtext.yaml
