--- a/language-configuration.json
+++ b/language-configuration.json
@@ -1,24 +1,51 @@
 {
-    "comments": {
-        "lineComment": "#"
-    },
-    "brackets": [
-        ["{", "}"],
-        ["[", "]"],
-        ["(", ")"]
-    ],
-    "autoClosingPairs": [
-        ["{", "}"],
-        ["[", "]"],
-        ["(", ")"],
-        ["\"", "\""],
-        ["'", "'"]
-    ],
-    "surroundingPairs": [
-        ["{", "}"],
-        ["[", "]"],
-        ["(", ")"],
-        ["\"", "\""],
-        ["'", "'"]
-    ]
+	"comments": {
+		"lineComment": "#"
+	},
+	"brackets": [
+		["{", "}"],
+		["[", "]"],
+		["(", ")"]
+	],
+	"autoClosingPairs": [
+		["{", "}"],
+		["[", "]"],
+		["(", ")"],
+		["\"", "\""],
+		["'", "'"]
+	],
+	"surroundingPairs": [
+		["{", "}"],
+		["[", "]"],
+		["(", ")"],
+		["\"", "\""],
+		["'", "'"]
+	],
+	"indentationRules": {
+		"increaseIndentPattern": "^\\s*(?:-|[^\\[{#\\s](?:[^:]|:[^ ])*:)$",
+		"decreaseIndentPattern": "(?!)"
+	},
+	"onEnterRules": [
+		{
+			"beforeText": "^\\s*- ",
+			"action": {
+				"indent": "none",
+				"appendText": "- "
+			}
+		},
+		{
+			"beforeText": "^\\s*>(?: |$)",
+			"action": {
+				"indent": "none",
+				"appendText": "> "
+			}
+		},
+		{
+			"beforeText": "^\\s*:(?: |$)",
+			"action": {
+				"indent": "none",
+				"appendText": ": "
+			}
+		}
+	]
 }
